修复 SVG 转换工具：添加缺失的 triggerDownload 函数

--- a/apkTools_6.0/svg_converter.html
+++ b/apkTools_6.0/svg_converter.html
@@ -312,6 +312,17 @@
         img.src=src;
       });
     }
+
+    function triggerDownload(blob,filename){
+      const url=URL.createObjectURL(blob);
+      const a=document.createElement('a');
+      a.href=url;
+      a.download=filename;
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+      setTimeout(()=>URL.revokeObjectURL(url),100);
+    }
   </script>
 </body>
 </html>
