--- a/apkTools_6.0/index.html
+++ b/apkTools_6.0/index.html
@@ -1,33 +1,155 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>工具管理面板</title>
   <style>
-    *{margin:0;padding:0;box-sizing:border-box}
-    body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);min-height:100vh;padding:20px}
-    .container{max-width:1100px;margin:0 auto;background:#fff;border-radius:16px;box-shadow:0 20px 60px rgba(0,0,0,.3);overflow:hidden}
-    .header{background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);color:#fff;padding:30px;text-align:center}
-    .header h1{font-size:28px;margin-bottom:10px}
-    .header p{opacity:.9;font-size:14px}
-    .content{padding:30px}
-    .card-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:20px}
-    .tool-card{background:#fff;border:2px solid #dee2e6;border-radius:12px;padding:18px;transition:all .2s;display:flex;flex-direction:column}
-    .tool-card:hover{border-color:#667eea;box-shadow:0 6px 18px rgba(102,126,234,.2);transform:translateY(-2px)}
-    .tool-icon{font-size:28px;margin-bottom:8px}
-    .tool-title{font-size:18px;color:#343a40;font-weight:700;margin-bottom:6px}
-    .tool-desc{font-size:13px;color:#6c757d;line-height:1.6;margin-bottom:14px;flex:1}
-    .btn{background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);color:#fff;border:none;padding:12px 18px;border-radius:8px;font-size:14px;font-weight:600;cursor:pointer;transition:transform .2s;width:100%}
-    .btn:hover{transform:translateY(-2px);box-shadow:0 5px 15px rgba(102,126,234,.4)}
-    .quick-section{background:#f8f9fa;border-radius:12px;padding:18px;margin-top:25px}
-    .quick-title{font-size:16px;color:#495057;margin-bottom:12px;border-bottom:2px solid #667eea;padding-bottom:8px}
-    .quick-links{display:flex;flex-wrap:wrap;gap:10px}
-    .link-pill{display:inline-block;padding:8px 12px;border-radius:999px;border:1px solid #dee2e6;color:#495057;text-decoration:none;font-size:13px;transition:all .2s}
-    .link-pill:hover{border-color:#667eea;color:#667eea;background:#f8f9ff}
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      min-height: 100vh;
+      padding: 20px
+    }
+
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, .3);
+      overflow: hidden
+    }
+
+    .header {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: #fff;
+      padding: 30px;
+      text-align: center
+    }
+
+    .header h1 {
+      font-size: 28px;
+      margin-bottom: 10px
+    }
+
+    .header p {
+      opacity: .9;
+      font-size: 14px
+    }
+
+    .content {
+      padding: 30px
+    }
+
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 20px
+    }
+
+    .tool-card {
+      background: #fff;
+      border: 2px solid #dee2e6;
+      border-radius: 12px;
+      padding: 18px;
+      transition: all .2s;
+      display: flex;
+      flex-direction: column
+    }
+
+    .tool-card:hover {
+      border-color: #667eea;
+      box-shadow: 0 6px 18px rgba(102, 126, 234, .2);
+      transform: translateY(-2px)
+    }
+
+    .tool-icon {
+      font-size: 28px;
+      margin-bottom: 8px
+    }
+
+    .tool-title {
+      font-size: 18px;
+      color: #343a40;
+      font-weight: 700;
+      margin-bottom: 6px
+    }
+
+    .tool-desc {
+      font-size: 13px;
+      color: #6c757d;
+      line-height: 1.6;
+      margin-bottom: 14px;
+      flex: 1
+    }
+
+    .btn {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: #fff;
+      border: none;
+      padding: 12px 18px;
+      border-radius: 8px;
+      font-size: 14px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: transform .2s;
+      width: 100%
+    }
+
+    .btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 5px 15px rgba(102, 126, 234, .4)
+    }
+
+    .quick-section {
+      background: #f8f9fa;
+      border-radius: 12px;
+      padding: 18px;
+      margin-top: 25px
+    }
+
+    .quick-title {
+      font-size: 16px;
+      color: #495057;
+      margin-bottom: 12px;
+      border-bottom: 2px solid #667eea;
+      padding-bottom: 8px
+    }
+
+    .quick-links {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px
+    }
+
+    .link-pill {
+      display: inline-block;
+      padding: 8px 12px;
+      border-radius: 999px;
+      border: 1px solid #dee2e6;
+      color: #495057;
+      text-decoration: none;
+      font-size: 13px;
+      transition: all .2s
+    }
+
+    .link-pill:hover {
+      border-color: #667eea;
+      color: #667eea;
+      background: #f8f9ff
+    }
   </style>
   <link rel="icon" href="data:,">
 </head>
+
 <body>
   <div class="container">
     <div class="header">
@@ -78,6 +200,12 @@
           <div class="tool-desc">支持 SVG 与位图的双向转换，设置尺寸与比例并下载。</div>
           <a class="btn" href="./svg_converter.html">打开工具</a>
         </div>
+        <div class="tool-card">
+          <div class="tool-icon">🔐</div>
+          <div class="tool-title">字符串加解密工具</div>
+          <div class="tool-desc">支持 Base64、URL、Hex、Unicode、摩斯密码等编码，以及 MD5、SHA、AES、凯撒密码等加解密。</div>
+          <a class="btn" href="./string_encryptor.html">打开工具</a>
+        </div>
       </div>
       <div class="quick-section">
         <div class="quick-title">快速入口</div>
@@ -89,9 +217,11 @@
           <a class="link-pill" href="./launch_image_generator.html">启动图生成</a>
           <a class="link-pill" href="./icon_factory.html">图标工厂</a>
           <a class="link-pill" href="./svg_converter.html">SVG 互转</a>
+          <a class="link-pill" href="./string_encryptor.html">字符串加解密</a>
         </div>
       </div>
     </div>
   </div>
 </body>
+
 </html>
