--- a/apkTools_6.0/string_encryptor.html
+++ b/apkTools_6.0/string_encryptor.html
@@ -161,6 +161,39 @@
       font-size: 14px
     }
 
+    .input-output-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+      margin-bottom: 20px
+    }
+
+    .input-output-grid .form-group {
+      margin-bottom: 0
+    }
+
+    .input-output-grid textarea,
+    .input-output-grid .result-area {
+      min-height: 300px;
+      height: 100%
+    }
+
+    .action-buttons {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 10px
+    }
+
+    .action-buttons .btn {
+      flex: 1
+    }
+
+    @media (max-width: 768px) {
+      .input-output-grid {
+        grid-template-columns: 1fr
+      }
+    }
+
     .algorithm-tabs {
       display: flex;
       flex-wrap: wrap;
@@ -214,24 +247,27 @@
       </div>
 
       <div class="form-section">
-        <h2>输入内容</h2>
-        <div class="form-group">
-          <label for="inputText">输入文本</label>
-          <textarea id="inputText" placeholder="请输入要加密/解密的内容..."></textarea>
+        <h2>输入与输出</h2>
+        <div class="input-output-grid">
+          <div class="form-group">
+            <label for="inputText">输入文本</label>
+            <textarea id="inputText" placeholder="请输入要加密/解密的内容..."></textarea>
+          </div>
+          <div class="form-group">
+            <label for="outputText">输出结果</label>
+            <div class="result-area" id="outputText"></div>
+          </div>
         </div>
         <div class="controls-grid" id="algorithmControls"></div>
-        <button class="btn" id="processBtn">处理</button>
-        <button class="btn btn-secondary" id="clearBtn">清空</button>
-        <div class="status" id="status"></div>
-      </div>
-
-      <div class="form-section">
-        <h2>输出结果</h2>
-        <div class="form-group">
-          <label for="outputText">结果</label>
-          <div class="result-area" id="outputText"></div>
+        <div class="action-buttons">
+          <button class="btn" id="encryptBtn">🔒 加密</button>
+          <button class="btn" id="decryptBtn">🔓 解密</button>
         </div>
-        <button class="btn btn-secondary" id="copyBtn">复制结果</button>
+        <div style="display:flex;gap:10px;margin-top:10px">
+          <button class="btn btn-secondary" id="clearBtn" style="flex:1">清空</button>
+          <button class="btn btn-secondary" id="copyBtn" style="flex:1">复制结果</button>
+        </div>
+        <div class="status" id="status"></div>
       </div>
     </div>
   </div>
@@ -256,7 +292,8 @@
     const algorithmControls = document.getElementById('algorithmControls');
     const inputText = document.getElementById('inputText');
     const outputText = document.getElementById('outputText');
-    const processBtn = document.getElementById('processBtn');
+    const encryptBtn = document.getElementById('encryptBtn');
+    const decryptBtn = document.getElementById('decryptBtn');
     const clearBtn = document.getElementById('clearBtn');
     const copyBtn = document.getElementById('copyBtn');
     const status = document.getElementById('status');
@@ -302,17 +339,6 @@
       }
 
       if (algo.type === 'crypto' && currentAlgorithm === 'aes') {
-        const modeGroup = document.createElement('div');
-        modeGroup.className = 'form-group';
-        modeGroup.innerHTML = `
-          <label for="operationMode">操作模式</label>
-          <select id="operationMode">
-            <option value="encrypt">加密</option>
-            <option value="decrypt">解密</option>
-          </select>
-        `;
-        algorithmControls.appendChild(modeGroup);
-
         const aesModeGroup = document.createElement('div');
         aesModeGroup.className = 'form-group';
         aesModeGroup.innerHTML = `
@@ -401,28 +427,6 @@
           <div class="info-text">用于PBKDF2密钥派生，SHA-256是平衡选择</div>
         `;
         algorithmControls.appendChild(hashAlgoGroup);
-      } else if (algo.type === 'encode') {
-        const modeGroup = document.createElement('div');
-        modeGroup.className = 'form-group';
-        modeGroup.innerHTML = `
-          <label for="operationMode">操作模式</label>
-          <select id="operationMode">
-            <option value="encode">编码</option>
-            <option value="decode">解码</option>
-          </select>
-        `;
-        algorithmControls.appendChild(modeGroup);
-      } else if (algo.type === 'crypto') {
-        const modeGroup = document.createElement('div');
-        modeGroup.className = 'form-group';
-        modeGroup.innerHTML = `
-          <label for="operationMode">操作模式</label>
-          <select id="operationMode">
-            <option value="encrypt">加密</option>
-            <option value="decrypt">解密</option>
-          </select>
-        `;
-        algorithmControls.appendChild(modeGroup);
       }
     }
 
@@ -1022,7 +1026,28 @@
       });
     }
 
-    processBtn.addEventListener('click', process);
+    encryptBtn.addEventListener('click', () => {
+      const algo = algorithms[currentAlgorithm];
+      if (algo.type === 'encode') {
+        process('encode');
+      } else if (algo.type === 'crypto') {
+        process('encrypt');
+      } else if (algo.type === 'hash') {
+        process('hash');
+      }
+    });
+
+    decryptBtn.addEventListener('click', () => {
+      const algo = algorithms[currentAlgorithm];
+      if (algo.type === 'encode') {
+        process('decode');
+      } else if (algo.type === 'crypto') {
+        process('decrypt');
+      } else {
+        showStatus('该算法不支持解密操作', 'error');
+      }
+    });
+
     clearBtn.addEventListener('click', clearAll);
     copyBtn.addEventListener('click', copyResult);
 
