优化UI：增加输入输出区域与选项菜单间距，按钮改为淡色精美渐变

--- a/apkTools_6.0/string_encryptor.html
+++ b/apkTools_6.0/string_encryptor.html
@@ -68,7 +68,7 @@
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 15px;
-      margin-top: 20px
+      margin-top: 30px
     }
 
     .form-group {
@@ -166,7 +166,7 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 20px;
-      margin-bottom: 20px
+      margin-bottom: 30px
     }
 
     .input-output-grid .form-group {
@@ -190,23 +190,27 @@
     }
 
     .btn-encrypt {
-      background: linear-gradient(135deg, #e74c3c 0%, #c0392b 100%);
-      color: #fff
+      background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 50%, #fecfef 100%);
+      color: #fff;
+      border: none
     }
 
     .btn-encrypt:hover {
-      background: linear-gradient(135deg, #c0392b 0%, #a93226 100%);
-      box-shadow: 0 5px 15px rgba(231, 76, 60, .4)
+      background: linear-gradient(135deg, #ff8a8e 0%, #febfdf 50%, #febfdf 100%);
+      box-shadow: 0 5px 15px rgba(255, 154, 158, .4);
+      transform: translateY(-2px)
     }
 
     .btn-decrypt {
-      background: linear-gradient(135deg, #27ae60 0%, #229954 100%);
-      color: #fff
+      background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%);
+      color: #fff;
+      border: none
     }
 
     .btn-decrypt:hover {
-      background: linear-gradient(135deg, #229954 0%, #1e8449 100%);
-      box-shadow: 0 5px 15px rgba(39, 174, 96, .4)
+      background: linear-gradient(135deg, #98ddd8 0%, #fec6d3 100%);
+      box-shadow: 0 5px 15px rgba(168, 237, 234, .4);
+      transform: translateY(-2px)
     }
 
 
