--- a/apkTools_6.0/string_encryptor.html
+++ b/apkTools_6.0/string_encryptor.html
@@ -168,21 +168,49 @@
 
     .input-box-wrapper,
     .output-box-wrapper {
-      position: relative;
+      background: #fff;
+      border: 2px solid #dee2e6;
+      border-radius: 12px;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px
+    }
+
+    .input-box-wrapper .form-group,
+    .output-box-wrapper .form-group {
+      margin-bottom: 0;
+      flex: 1;
       display: flex;
       flex-direction: column
+    }
+
+    .input-box-wrapper textarea,
+    .output-box-wrapper .result-area {
+      flex: 1;
+      min-height: 250px;
+      border: 1px solid #e9ecef;
+      border-radius: 8px
     }
 
     .input-box-buttons,
     .output-box-buttons {
       display: flex;
-      gap: 10px;
-      margin-top: 10px
+      gap: 12px;
+      padding-top: 10px;
+      border-top: 1px solid #f0f0f0
     }
 
-    .input-box-buttons .btn,
+    .input-box-buttons .btn {
+      flex: 1;
+      padding: 12px 20px;
+      font-size: 14px
+    }
+
     .output-box-buttons .btn {
-      flex: 1
+      width: 100%;
+      padding: 12px 20px;
+      font-size: 14px
     }
 
     .input-output-grid {
@@ -192,15 +220,6 @@
       margin-bottom: 30px
     }
 
-    .input-output-grid .form-group {
-      margin-bottom: 0
-    }
-
-    .input-output-grid textarea,
-    .input-output-grid .result-area {
-      min-height: 300px;
-      height: 100%
-    }
 
     .action-buttons {
       display: flex;
@@ -305,22 +324,22 @@
         <div class="input-output-grid">
           <div class="input-box-wrapper">
             <div class="form-group">
-              <label for="inputText">输入文本</label>
+              <label for="inputText" style="font-weight:600;color:#495057;margin-bottom:8px">输入文本</label>
               <textarea id="inputText" placeholder="请输入要加密/解密的内容..."></textarea>
             </div>
             <div class="input-box-buttons">
-              <button class="btn btn-secondary" id="clearBtn">清空</button>
+              <button class="btn btn-secondary" id="clearBtn">🗑️ 清空</button>
               <button class="btn btn-encrypt" id="encryptBtn">🔒 加密</button>
               <button class="btn btn-decrypt" id="decryptBtn">🔓 解密</button>
             </div>
           </div>
           <div class="output-box-wrapper">
             <div class="form-group">
-              <label for="outputText">输出结果</label>
+              <label for="outputText" style="font-weight:600;color:#495057;margin-bottom:8px">输出结果</label>
               <div class="result-area" id="outputText" contenteditable="false"></div>
             </div>
             <div class="output-box-buttons">
-              <button class="btn btn-secondary" id="copyBtn">复制结果</button>
+              <button class="btn btn-secondary" id="copyBtn">📋 复制结果</button>
             </div>
           </div>
         </div>
