新增RGB颜色互转工具和时间戳转换工具，添加到工具管理面板

--- a/apkTools_6.0/index.html
+++ b/apkTools_6.0/index.html
@@ -206,6 +206,18 @@
           <div class="tool-desc">支持 Base64、URL、Hex、Unicode、摩斯密码等编码，以及 MD5、SHA、AES、凯撒密码等加解密。</div>
           <a class="btn" href="./string_encryptor.html">打开工具</a>
         </div>
+        <div class="tool-card">
+          <div class="tool-icon">🎨</div>
+          <div class="tool-title">RGB 颜色互转工具</div>
+          <div class="tool-desc">支持 RGB、HEX、HSL 颜色格式互转，提供主流颜色预设卡片，条状展示。</div>
+          <a class="btn" href="./color_converter.html">打开工具</a>
+        </div>
+        <div class="tool-card">
+          <div class="tool-icon">⏰</div>
+          <div class="tool-title">时间戳转换工具</div>
+          <div class="tool-desc">支持秒级和毫秒级时间戳与日期时间互转，自动识别时间戳类型。</div>
+          <a class="btn" href="./timestamp_converter.html">打开工具</a>
+        </div>
       </div>
       <div class="quick-section">
         <div class="quick-title">快速入口</div>
@@ -218,6 +230,8 @@
           <a class="link-pill" href="./icon_factory.html">图标工厂</a>
           <a class="link-pill" href="./svg_converter.html">SVG 互转</a>
           <a class="link-pill" href="./string_encryptor.html">字符串加解密</a>
+          <a class="link-pill" href="./color_converter.html">颜色互转</a>
+          <a class="link-pill" href="./timestamp_converter.html">时间戳转换</a>
         </div>
       </div>
     </div>
