扩展颜色转换工具：添加主流App颜色和品牌色预设

--- a/apkTools_release/color_converter.html
+++ b/apkTools_release/color_converter.html
@@ -240,6 +240,7 @@
     const colorPresets = document.getElementById('colorPresets');
 
     const presetColors = [
+      // 基础颜色
       { name: '红色', hex: '#FF0000', rgb: 'rgb(255, 0, 0)' },
       { name: '绿色', hex: '#00FF00', rgb: 'rgb(0, 255, 0)' },
       { name: '蓝色', hex: '#0000FF', rgb: 'rgb(0, 0, 255)' },
@@ -251,6 +252,65 @@
       { name: '黑色', hex: '#000000', rgb: 'rgb(0, 0, 0)' },
       { name: '白色', hex: '#FFFFFF', rgb: 'rgb(255, 255, 255)' },
       { name: '灰色', hex: '#808080', rgb: 'rgb(128, 128, 128)' },
+
+      // 主流 App 颜色
+      { name: '微信绿', hex: '#07C160', rgb: 'rgb(7, 193, 96)' },
+      { name: '支付宝蓝', hex: '#1677FF', rgb: 'rgb(22, 119, 255)' },
+      { name: '抖音红', hex: '#FF0050', rgb: 'rgb(255, 0, 80)' },
+      { name: '微博橙', hex: '#FF6600', rgb: 'rgb(255, 102, 0)' },
+      { name: 'QQ蓝', hex: '#12B7F5', rgb: 'rgb(18, 183, 245)' },
+      { name: '淘宝橙', hex: '#FF5000', rgb: 'rgb(255, 80, 0)' },
+      { name: '京东红', hex: '#E1251B', rgb: 'rgb(225, 37, 27)' },
+      { name: '美团黄', hex: '#FFC300', rgb: 'rgb(255, 195, 0)' },
+      { name: '饿了么蓝', hex: '#0096FF', rgb: 'rgb(0, 150, 255)' },
+      { name: '小红书红', hex: '#FF2442', rgb: 'rgb(255, 36, 66)' },
+      { name: 'B站粉', hex: '#FB7299', rgb: 'rgb(251, 114, 153)' },
+      { name: '知乎蓝', hex: '#0084FF', rgb: 'rgb(0, 132, 255)' },
+      { name: '豆瓣绿', hex: '#42BD56', rgb: 'rgb(66, 189, 86)' },
+      { name: '网易云红', hex: '#E83C3C', rgb: 'rgb(232, 60, 60)' },
+      { name: 'QQ音乐绿', hex: '#31C27C', rgb: 'rgb(49, 194, 124)' },
+      { name: '酷狗蓝', hex: '#00A0E9', rgb: 'rgb(0, 160, 233)' },
+      { name: '爱奇艺粉', hex: '#FF6B9D', rgb: 'rgb(255, 107, 157)' },
+      { name: '腾讯视频蓝', hex: '#002FA7', rgb: 'rgb(0, 47, 167)' },
+      { name: '优酷蓝', hex: '#00A8E6', rgb: 'rgb(0, 168, 230)' },
+      { name: '百度红', hex: '#2932E1', rgb: 'rgb(41, 50, 225)' },
+      { name: '高德蓝', hex: '#0091FF', rgb: 'rgb(0, 145, 255)' },
+      { name: '滴滴橙', hex: '#FF6600', rgb: 'rgb(255, 102, 0)' },
+      { name: '携程蓝', hex: '#1BA9BA', rgb: 'rgb(27, 169, 186)' },
+      { name: '飞猪橙', hex: '#FF6A00', rgb: 'rgb(255, 106, 0)' },
+
+      // 国际品牌色
+      { name: '苹果黑', hex: '#000000', rgb: 'rgb(0, 0, 0)' },
+      { name: '苹果灰', hex: '#86868B', rgb: 'rgb(134, 134, 139)' },
+      { name: '谷歌蓝', hex: '#4285F4', rgb: 'rgb(66, 133, 244)' },
+      { name: '谷歌红', hex: '#EA4335', rgb: 'rgb(234, 67, 53)' },
+      { name: '谷歌黄', hex: '#FBBC05', rgb: 'rgb(251, 188, 5)' },
+      { name: '谷歌绿', hex: '#34A853', rgb: 'rgb(52, 168, 83)' },
+      { name: 'Facebook蓝', hex: '#1877F2', rgb: 'rgb(24, 119, 242)' },
+      { name: 'Twitter蓝', hex: '#1DA1F2', rgb: 'rgb(29, 161, 242)' },
+      { name: 'Instagram紫', hex: '#E4405F', rgb: 'rgb(228, 64, 95)' },
+      { name: 'YouTube红', hex: '#FF0000', rgb: 'rgb(255, 0, 0)' },
+      { name: 'LinkedIn蓝', hex: '#0077B5', rgb: 'rgb(0, 119, 181)' },
+      { name: 'GitHub黑', hex: '#24292E', rgb: 'rgb(36, 41, 46)' },
+      { name: 'GitHub紫', hex: '#6F42C1', rgb: 'rgb(111, 66, 193)' },
+      { name: 'Spotify绿', hex: '#1DB954', rgb: 'rgb(29, 185, 84)' },
+      { name: 'Netflix红', hex: '#E50914', rgb: 'rgb(229, 9, 20)' },
+      { name: 'Amazon橙', hex: '#FF9900', rgb: 'rgb(255, 153, 0)' },
+      { name: 'Microsoft蓝', hex: '#0078D4', rgb: 'rgb(0, 120, 212)' },
+      { name: 'Adobe红', hex: '#FF0000', rgb: 'rgb(255, 0, 0)' },
+      { name: 'PayPal蓝', hex: '#003087', rgb: 'rgb(0, 48, 135)' },
+      { name: 'Stripe蓝', hex: '#635BFF', rgb: 'rgb(99, 91, 255)' },
+      { name: 'Airbnb红', hex: '#FF5A5F', rgb: 'rgb(255, 90, 95)' },
+      { name: 'Uber黑', hex: '#000000', rgb: 'rgb(0, 0, 0)' },
+      { name: 'Tesla红', hex: '#E31937', rgb: 'rgb(227, 25, 55)' },
+      { name: 'Nike黑', hex: '#000000', rgb: 'rgb(0, 0, 0)' },
+      { name: 'Coca-Cola红', hex: '#F40009', rgb: 'rgb(244, 0, 9)' },
+      { name: 'Pepsi蓝', hex: '#004B93', rgb: 'rgb(0, 75, 147)' },
+      { name: 'Starbucks绿', hex: '#00704A', rgb: 'rgb(0, 112, 74)' },
+      { name: 'McDonald\'s金', hex: '#FFC72C', rgb: 'rgb(255, 199, 44)' },
+      { name: 'McDonald\'s红', hex: '#DA291C', rgb: 'rgb(218, 41, 28)' },
+
+      // 其他常用颜色
       { name: '深红', hex: '#8B0000', rgb: 'rgb(139, 0, 0)' },
       { name: '深绿', hex: '#006400', rgb: 'rgb(0, 100, 0)' },
       { name: '深蓝', hex: '#00008B', rgb: 'rgb(0, 0, 139)' },
@@ -269,7 +329,7 @@
       { name: '紫罗兰', hex: '#8A2BE2', rgb: 'rgb(138, 43, 226)' },
       { name: '深紫色', hex: '#4B0082', rgb: 'rgb(75, 0, 130)' },
       { name: '深粉色', hex: '#FF1493', rgb: 'rgb(255, 20, 147)' },
-      { name: '青绿色', hex: '#00CED1', rgb: 'rgb(0, 206, 209)' }
+      { name: '薄荷绿', hex: '#00CED1', rgb: 'rgb(0, 206, 209)' }
     ];
 
     function hexToRgb(hex) {
