--- a/apkTools_release/index.html
+++ b/apkTools_release/index.html
@@ -218,6 +218,12 @@
           <div class="tool-desc">支持秒级和毫秒级时间戳与日期时间互转，自动识别时间戳类型。</div>
           <a class="btn" href="./timestamp_converter.html">打开工具</a>
         </div>
+        <div class="tool-card">
+          <div class="tool-icon">📱</div>
+          <div class="tool-title">二维码/条形码生成工具</div>
+          <div class="tool-desc">支持自定义样式、颜色和中心图标，生成高质量二维码和多种格式条形码。</div>
+          <a class="btn" href="./qrcode_generator.html">打开工具</a>
+        </div>
       </div>
       <div class="quick-section">
         <div class="quick-title">快速入口</div>
@@ -232,6 +238,7 @@
           <a class="link-pill" href="./string_encryptor.html">字符串加解密</a>
           <a class="link-pill" href="./color_converter.html">颜色互转</a>
           <a class="link-pill" href="./timestamp_converter.html">时间戳转换</a>
+          <a class="link-pill" href="./qrcode_generator.html">二维码/条形码</a>
         </div>
       </div>
     </div>
