新增API调试工具：支持HTTP请求和WebSocket(WSS)连接调试，类似APIFOX

--- a/apkTools_release/index.html
+++ b/apkTools_release/index.html
@@ -224,6 +224,12 @@
           <div class="tool-desc">支持自定义样式、颜色和中心图标，生成高质量二维码和多种格式条形码。</div>
           <a class="btn" href="./qrcode_generator.html">打开工具</a>
         </div>
+        <div class="tool-card">
+          <div class="tool-icon">🔧</div>
+          <div class="tool-title">API 调试工具</div>
+          <div class="tool-desc">支持 HTTP 请求和 WebSocket (WSS) 连接调试，类似 APIFOX，包含请求历史记录。</div>
+          <a class="btn" href="./api_debugger.html">打开工具</a>
+        </div>
       </div>
       <div class="quick-section">
         <div class="quick-title">快速入口</div>
@@ -239,6 +245,7 @@
           <a class="link-pill" href="./color_converter.html">颜色互转</a>
           <a class="link-pill" href="./timestamp_converter.html">时间戳转换</a>
           <a class="link-pill" href="./qrcode_generator.html">二维码/条形码</a>
+          <a class="link-pill" href="./api_debugger.html">API 调试</a>
         </div>
       </div>
     </div>
