--- a/apkTools_release/api_debugger.html
+++ b/apkTools_release/api_debugger.html
@@ -192,13 +192,20 @@
     }
 
     .header-item {
-      display: flex;
+      display: grid;
+      grid-template-columns: 30px 1fr 1fr 80px;
       gap: 10px;
       margin-bottom: 10px;
       align-items: center
     }
 
-    .header-item input {
+    .header-item input[type="checkbox"] {
+      width: 18px;
+      height: 18px;
+      cursor: pointer
+    }
+
+    .header-item input[type="text"] {
       flex: 1;
       padding: 8px;
       border: 1px solid #dee2e6;
@@ -253,39 +260,125 @@
       font-size: 12px
     }
 
-    .batch-edit-area {
-      background: #fff;
-      border: 2px solid #dee2e6;
-      border-radius: 8px;
-      padding: 15px;
-      margin-bottom: 15px
-    }
-
-    .batch-edit-area textarea {
-      width: 100%;
-      min-height: 80px;
-      padding: 10px;
-      border: 1px solid #dee2e6;
-      border-radius: 4px;
-      font-family: 'Courier New', monospace;
-      font-size: 12px;
-      margin-bottom: 10px
-    }
-
-    .batch-format-buttons {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 10px
-    }
-
-    .batch-format-buttons button {
+    .batch-edit-btn {
       padding: 6px 12px;
       background: #667eea;
       color: #fff;
       border: none;
       border-radius: 4px;
       cursor: pointer;
-      font-size: 12px
+      font-size: 12px;
+      margin-bottom: 10px
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      align-items: center;
+      justify-content: center
+    }
+
+    .modal.active {
+      display: flex
+    }
+
+    .modal-content {
+      background: #fff;
+      border-radius: 12px;
+      padding: 25px;
+      max-width: 600px;
+      width: 90%;
+      max-height: 80vh;
+      overflow-y: auto;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, .3)
+    }
+
+    .modal-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+      padding-bottom: 15px;
+      border-bottom: 2px solid #667eea
+    }
+
+    .modal-header h3 {
+      font-size: 18px;
+      color: #495057
+    }
+
+    .modal-close {
+      background: none;
+      border: none;
+      font-size: 24px;
+      cursor: pointer;
+      color: #6c757d;
+      padding: 0;
+      width: 30px;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 4px;
+      transition: all .2s
+    }
+
+    .modal-close:hover {
+      background: #f8f9fa;
+      color: #495057
+    }
+
+    .batch-edit-area {
+      margin-bottom: 20px
+    }
+
+    .batch-edit-area textarea {
+      width: 100%;
+      min-height: 120px;
+      padding: 10px;
+      border: 2px solid #dee2e6;
+      border-radius: 8px;
+      font-family: 'Courier New', monospace;
+      font-size: 13px;
+      margin-bottom: 10px;
+      resize: vertical
+    }
+
+    .batch-format-buttons {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 15px
+    }
+
+    .batch-format-buttons button {
+      padding: 8px 16px;
+      background: #667eea;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 13px;
+      transition: all .2s
+    }
+
+    .batch-format-buttons button:hover {
+      background: #5568d3;
+      transform: translateY(-1px)
+    }
+
+    .modal-footer {
+      display: flex;
+      justify-content: flex-end;
+      gap: 10px;
+      margin-top: 20px;
+      padding-top: 15px;
+      border-top: 1px solid #dee2e6
     }
 
     .file-input-wrapper {
@@ -538,16 +631,10 @@
             </div>
           </div>
           <div class="form-group">
-            <label>请求参数</label>
-            <div class="batch-edit-area">
-              <div class="batch-format-buttons">
-                <button onclick="parseBatchParams('comma')">批量导入（逗号格式）</button>
-                <button onclick="parseBatchParams('colon')">批量导入（冒号格式）</button>
-                <button onclick="exportBatchParams()">批量导出</button>
-              </div>
-              <textarea id="batchParamsInput"
-                placeholder='逗号格式：key1=value1,key2=value2&#10;冒号格式：key1:value1&#10;key2:value2'></textarea>
-            </div>
+            <label>
+              请求参数
+              <button class="batch-edit-btn" onclick="openBatchEditModal('params')">📝 批量编辑</button>
+            </label>
             <div class="headers-list" id="paramsList">
               <div class="param-item">
                 <input type="checkbox" checked>
@@ -565,9 +652,13 @@
             <button class="btn btn-secondary" onclick="addParam()" style="margin-top: 10px; width: auto;">添加参数</button>
           </div>
           <div class="form-group">
-            <label>请求头</label>
+            <label>
+              请求头
+              <button class="batch-edit-btn" onclick="openBatchEditModal('headers')">📝 批量编辑</button>
+            </label>
             <div class="headers-list" id="httpHeadersList">
               <div class="header-item">
+                <input type="checkbox" checked>
                 <input type="text" placeholder="Key" class="header-key" value="Content-Type">
                 <input type="text" placeholder="Value" class="header-value" value="application/json">
                 <button onclick="removeHeader(this)">删除</button>
@@ -648,6 +739,30 @@
     </div>
   </div>
 
+  <!-- 批量编辑弹窗 -->
+  <div class="modal" id="batchEditModal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 id="modalTitle">批量编辑</h3>
+        <button class="modal-close" onclick="closeBatchEditModal()">&times;</button>
+      </div>
+      <div class="batch-edit-area">
+        <label>批量输入</label>
+        <textarea id="batchEditInput"
+          placeholder='逗号格式：key1=value1,key2=value2&#10;冒号格式：key1:value1&#10;key2:value2'></textarea>
+        <div class="batch-format-buttons">
+          <button onclick="parseBatchInput('comma')">批量导入（逗号格式）</button>
+          <button onclick="parseBatchInput('colon')">批量导入（冒号格式）</button>
+          <button onclick="exportBatchInput()">批量导出</button>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" onclick="closeBatchEditModal()">取消</button>
+        <button class="btn" onclick="applyBatchEdit()">应用</button>
+      </div>
+    </div>
+  </div>
+
   <script>
     // 标签页切换
     document.querySelectorAll('.tab-btn').forEach(btn => {
@@ -668,6 +783,7 @@
       const item = document.createElement('div');
       item.className = 'header-item';
       item.innerHTML = `
+        <input type="checkbox" checked>
         <input type="text" placeholder="Key" class="header-key">
         <input type="text" placeholder="Value" class="header-value">
         <button onclick="removeHeader(this)">删除</button>
@@ -679,9 +795,13 @@
       btn.parentElement.remove();
     }
 
+    let currentBatchEditType = 'params'; // 'params' 或 'headers'
+
     function getHeaders() {
       const headers = {};
       document.querySelectorAll('.header-item').forEach(item => {
+        const checkbox = item.querySelector('input[type="checkbox"]');
+        if (!checkbox.checked) return;
         const key = item.querySelector('.header-key').value.trim();
         const value = item.querySelector('.header-value').value.trim();
         if (key && value) {
@@ -690,6 +810,127 @@
       });
       return headers;
     }
+
+    // 批量编辑弹窗
+    function openBatchEditModal(type) {
+      currentBatchEditType = type;
+      const modal = document.getElementById('batchEditModal');
+      const title = document.getElementById('modalTitle');
+      title.textContent = type === 'params' ? '批量编辑参数' : '批量编辑请求头';
+      modal.classList.add('active');
+
+      // 如果已有数据，导出到输入框
+      exportBatchInput();
+    }
+
+    function closeBatchEditModal() {
+      const modal = document.getElementById('batchEditModal');
+      modal.classList.remove('active');
+    }
+
+    function exportBatchInput() {
+      const input = document.getElementById('batchEditInput');
+      let lines = [];
+
+      if (currentBatchEditType === 'params') {
+        const { params } = getParams();
+        lines = Object.entries(params).map(([key, value]) => `${key}:${value}`);
+      } else {
+        document.querySelectorAll('.header-item').forEach(item => {
+          const key = item.querySelector('.header-key').value.trim();
+          const value = item.querySelector('.header-value').value.trim();
+          if (key && value) {
+            lines.push(`${key}:${value}`);
+          }
+        });
+      }
+
+      input.value = lines.join('\n');
+    }
+
+    function parseBatchInput(format) {
+      const input = document.getElementById('batchEditInput').value.trim();
+      if (!input) {
+        alert('请输入要导入的内容');
+        return;
+      }
+
+      const lines = input.split('\n').filter(line => line.trim());
+      const items = [];
+
+      lines.forEach(line => {
+        let key, value;
+        if (format === 'comma') {
+          const parts = line.split(',');
+          parts.forEach(part => {
+            const [k, v] = part.split('=').map(s => s.trim());
+            if (k && v) {
+              items.push({ key: k, value: v });
+            }
+          });
+        } else if (format === 'colon') {
+          const [k, v] = line.split(':').map(s => s.trim());
+          if (k && v) {
+            items.push({ key: k, value: v });
+          }
+        }
+      });
+
+      // 清空现有项目并添加新项目
+      if (currentBatchEditType === 'params') {
+        const paramsList = document.getElementById('paramsList');
+        paramsList.innerHTML = '';
+        items.forEach(item => {
+          const paramItem = document.createElement('div');
+          paramItem.className = 'param-item';
+          paramItem.innerHTML = `
+            <input type="checkbox" checked>
+            <input type="text" placeholder="参数名" class="param-key" value="${item.key}">
+            <input type="text" placeholder="参数值" class="param-value" value="${item.value}">
+            <select class="param-type">
+              <option value="text">Text</option>
+              <option value="number">Number</option>
+              <option value="boolean">Boolean</option>
+              <option value="file">File</option>
+            </select>
+            <button onclick="removeParam(this)">删除</button>
+          `;
+          paramsList.appendChild(paramItem);
+        });
+        if (items.length === 0) {
+          addParam();
+        }
+      } else {
+        const headersList = document.getElementById('httpHeadersList');
+        headersList.innerHTML = '';
+        items.forEach(item => {
+          const headerItem = document.createElement('div');
+          headerItem.className = 'header-item';
+          headerItem.innerHTML = `
+            <input type="checkbox" checked>
+            <input type="text" placeholder="Key" class="header-key" value="${item.key}">
+            <input type="text" placeholder="Value" class="header-value" value="${item.value}">
+            <button onclick="removeHeader(this)">删除</button>
+          `;
+          headersList.appendChild(headerItem);
+        });
+        if (items.length === 0) {
+          addHeader();
+        }
+      }
+    }
+
+    function applyBatchEdit() {
+      // 应用已经在 parseBatchInput 中完成，只需关闭弹窗
+      closeBatchEditModal();
+    }
+
+    // 点击弹窗外部关闭
+    document.getElementById('batchEditModal').addEventListener('click', (e) => {
+      if (e.target.id === 'batchEditModal') {
+        closeBatchEditModal();
+      }
+    });
 
     // 参数管理
     function addParam() {
@@ -778,59 +1019,6 @@
       return { params, files };
     }
 
-    function parseBatchParams(format) {
-      const input = document.getElementById('batchParamsInput').value.trim();
-      if (!input) {
-        alert('请输入要导入的参数');
-        return;
-      }
-
-      const lines = input.split('\n').filter(line => line.trim());
-      const paramsList = document.getElementById('paramsList');
-      paramsList.innerHTML = '';
-
-      lines.forEach(line => {
-        let key, value;
-        if (format === 'comma') {
-          const parts = line.split(',');
-          parts.forEach(part => {
-            const [k, v] = part.split('=').map(s => s.trim());
-            if (k && v) {
-              addParamItem(k, v);
-            }
-          });
-        } else if (format === 'colon') {
-          const [k, v] = line.split(':').map(s => s.trim());
-          if (k && v) {
-            addParamItem(k, v);
-          }
-        }
-      });
-
-      function addParamItem(key, value) {
-        const item = document.createElement('div');
-        item.className = 'param-item';
-        item.innerHTML = `
-          <input type="checkbox" checked>
-          <input type="text" placeholder="参数名" class="param-key" value="${key}">
-          <input type="text" placeholder="参数值" class="param-value" value="${value}">
-          <select class="param-type">
-            <option value="text">Text</option>
-            <option value="number">Number</option>
-            <option value="boolean">Boolean</option>
-            <option value="file">File</option>
-          </select>
-          <button onclick="removeParam(this)">删除</button>
-        `;
-        paramsList.appendChild(item);
-      }
-    }
-
-    function exportBatchParams() {
-      const { params } = getParams();
-      const lines = Object.entries(params).map(([key, value]) => `${key}:${value}`);
-      document.getElementById('batchParamsInput').value = lines.join('\n');
-    }
 
     function clearHttpRequest() {
       document.getElementById('httpUrl').value = '';
@@ -851,6 +1039,7 @@
       `;
       document.getElementById('httpHeadersList').innerHTML = `
         <div class="header-item">
+          <input type="checkbox" checked>
           <input type="text" placeholder="Key" class="header-key" value="Content-Type">
           <input type="text" placeholder="Value" class="header-value" value="application/json">
           <button onclick="removeHeader(this)">删除</button>
